--- a/game.html
+++ b/game.html
@@ -11,9 +11,9 @@ body{
   text-align:center;
   font-family:Arial;
   overflow:hidden;
+  height:100vh;
 }
 
-/* 버튼 스타일 */
 button{
   padding:10px 20px;
   margin:10px;
@@ -29,17 +29,16 @@ button:hover{
   color:black;
 }
 
-/* 게임 영역 */
 #gameArea{
   position:relative;
   width:100%;
-  height:80vh;
+  height:80%;
   overflow:hidden;
   margin-top:20px;
   border:1px solid cyan;
+  background:black;
 }
 
-/* 점수 표시 */
 #scoreDisplay {
   font-size: 20px;
   margin-top: 10px;
@@ -105,22 +104,26 @@ let scoreDisplay = document.getElementById("scoreDisplay");
 function clearGame(){
   gameArea.innerHTML="";
   score=0;
+  bullets=[];
+  scoreDisplay.innerText="점수: 0";
   document.title="우주 게임 센터";
-  bullets = [];
-  scoreDisplay.innerText = "점수: 0";
   if(enemyInterval) clearInterval(enemyInterval);
   if(moveInterval) clearInterval(moveInterval);
-  document.onmousemove = null;
-  document.onclick = null;
+  document.onmousemove=null;
+  document.onclick=null;
 }
 
 /* ================== 슈팅 게임 ================== */
 function startShooting(){
   clearGame();
   
-  let player = document.createElement("div");
+  let player=document.createElement("div");
   player.className="player";
   gameArea.appendChild(player);
+
+  // 중앙 초기 위치
+  player.style.left=(gameArea.offsetWidth/2 - 20)+"px";
+  player.style.top=(gameArea.offsetHeight - 50)+"px";
 
   document.onmousemove = e=>{
     let rect = gameArea.getBoundingClientRect();
@@ -131,93 +134,86 @@ function startShooting(){
   }
 
   document.onclick = ()=>{
-    let bullet = document.createElement("div");
+    let bullet=document.createElement("div");
     bullet.className="bullet";
-    bullet.style.left = (player.offsetLeft + 18) + "px";
-    bullet.style.top = (player.offsetTop - 15) + "px";
+    bullet.style.left=(player.offsetLeft + 18)+"px";
+    bullet.style.top=(player.offsetTop - 15)+"px";
     gameArea.appendChild(bullet);
     bullets.push(bullet);
   }
 
-  enemyInterval = setInterval(()=>{
-    let enemy = document.createElement("div");
+  enemyInterval=setInterval(()=>{
+    let enemy=document.createElement("div");
     enemy.className="enemy";
-    enemy.style.left = Math.random()*(gameArea.offsetWidth-30) + "px";
-    enemy.style.top = "0px";
+    enemy.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
+    enemy.style.top="0px";
     gameArea.appendChild(enemy);
-  }, 1000);
+  },1000);
 
-  moveInterval = setInterval(()=>{
-    let enemies = document.querySelectorAll(".enemy");
+  moveInterval=setInterval(()=>{
+    let enemies=document.querySelectorAll(".enemy");
     enemies.forEach(enemy=>{
-      enemy.style.top = (enemy.offsetTop + 5) + "px";
+      enemy.style.top=(enemy.offsetTop+5)+"px";
+      if(enemy.offsetTop>gameArea.offsetHeight) enemy.remove();
 
-      if(enemy.offsetTop > gameArea.offsetHeight){
-        enemy.remove();
-      }
-
-      bullets.forEach((bullet, i)=>{
-        if(
-          bullet.offsetTop < enemy.offsetTop + 30 &&
-          bullet.offsetTop + 15 > enemy.offsetTop &&
-          bullet.offsetLeft < enemy.offsetLeft + 30 &&
-          bullet.offsetLeft + 5 > enemy.offsetLeft
-        ){
+      bullets.forEach((bullet,i)=>{
+        if(bullet.offsetTop<enemy.offsetTop+30 &&
+           bullet.offsetTop+15>enemy.offsetTop &&
+           bullet.offsetLeft<enemy.offsetLeft+30 &&
+           bullet.offsetLeft+5>enemy.offsetLeft){
           enemy.remove();
           bullet.remove();
           bullets.splice(i,1);
           score++;
-          scoreDisplay.innerText = "점수: "+score;
-          document.title = "점수: "+score;
+          scoreDisplay.innerText="점수: "+score;
+          document.title="점수: "+score;
         }
       });
     });
 
-    bullets.forEach((bullet, i)=>{
-      bullet.style.top = (bullet.offsetTop - 10) + "px";
-      if(bullet.offsetTop < 0){
+    bullets.forEach((bullet,i)=>{
+      bullet.style.top=(bullet.offsetTop-10)+"px";
+      if(bullet.offsetTop<0){
         bullet.remove();
         bullets.splice(i,1);
       }
     });
-
-  }, 30);
+  },30);
 }
 
 /* ================== 피하기 게임 ================== */
 function startDodge(){
   clearGame();
   
-  let player = document.createElement("div");
+  let player=document.createElement("div");
   player.className="player";
   gameArea.appendChild(player);
 
+  player.style.left=(gameArea.offsetWidth/2 - 20)+"px";
+  player.style.top=(gameArea.offsetHeight - 50)+"px";
+
   document.onmousemove = e=>{
-    let rect = gameArea.getBoundingClientRect();
-    let x = e.clientX - rect.left - 20;
-    if(x < 0) x=0;
-    if(x > gameArea.offsetWidth - 40) x=gameArea.offsetWidth - 40;
-    player.style.left = x + "px";
+    let rect=gameArea.getBoundingClientRect();
+    let x=e.clientX - rect.left - 20;
+    if(x<0)x=0;
+    if(x>gameArea.offsetWidth-40)x=gameArea.offsetWidth-40;
+    player.style.left=x+"px";
   }
 
-  enemyInterval = setInterval(()=>{
-    let enemy = document.createElement("div");
+  enemyInterval=setInterval(()=>{
+    let enemy=document.createElement("div");
     enemy.className="enemy";
     enemy.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
     gameArea.appendChild(enemy);
 
     let fall=setInterval(()=>{
       enemy.style.top=(enemy.offsetTop+7)+"px";
-
-      if(
-        enemy.offsetTop+30 > player.offsetTop &&
-        enemy.offsetLeft < player.offsetLeft+40 &&
-        enemy.offsetLeft+30 > player.offsetLeft
-      ){
+      if(enemy.offsetTop+30>player.offsetTop &&
+         enemy.offsetLeft<player.offsetLeft+40 &&
+         enemy.offsetLeft+30>player.offsetLeft){
         alert("💥 게임오버!");
         location.reload();
       }
-
       if(enemy.offsetTop>gameArea.offsetHeight){
         enemy.remove();
         clearInterval(fall);
@@ -229,29 +225,24 @@ function startDodge(){
 /* ================== 클릭 게임 ================== */
 function startClick(){
   clearGame();
-  let scoreClick = 0;
-  scoreDisplay.innerText = "점수: 0";
+  let scoreClick=0;
+  scoreDisplay.innerText="점수: 0";
 
-  enemyInterval = setInterval(()=>{
-    let target = document.createElement("div");
+  enemyInterval=setInterval(()=>{
+    let target=document.createElement("div");
     target.className="target";
-    target.style.left = Math.random() * (gameArea.offsetWidth - 30) + "px";
-    target.style.top = Math.random() * (gameArea.offsetHeight - 30) + "px";
+    target.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
+    target.style.top=Math.random()*(gameArea.offsetHeight-30)+"px";
 
-    // 각 목표물마다 클릭 이벤트만 등록
-    target.onclick = () => {
+    target.onclick=()=>{
       scoreClick++;
-      scoreDisplay.innerText = "점수: " + scoreClick;
-      target.remove();
+      scoreDisplay.innerText="점수: "+scoreClick;
     }
 
     gameArea.appendChild(target);
-
-    // 1.5초 후 자동 제거
     setTimeout(()=>target.remove(),1500);
   },1000);
 }
 </script>
-
 </body>
 </html>
