--- a/contact.html
+++ b/contact.html
@@ -32,22 +32,88 @@ body {
 }
 
 .container {
-  margin-top: 200px;
+  margin-top: 180px;
+  animation: fadeIn 2s ease-in-out;
 }
 
-a {
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.button-group {
+  margin-top: 30px;
+}
+
+.button-group a {
+  position: relative;
   display: inline-block;
-  margin-top: 20px;
+  margin: 10px;
   padding: 12px 25px;
-  background: rgba(255,255,255,0.9);
-  color: black;
   text-decoration: none;
   border-radius: 10px;
+  font-weight: bold;
   transition: 0.3s;
+  overflow: hidden;
 }
 
-a:hover {
+/* 반짝 효과 */
+.button-group a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -75%;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    rgba(255,255,255,0) 0%,
+    rgba(255,255,255,0.6) 50%,
+    rgba(255,255,255,0) 100%
+  );
+  transform: skewX(-25deg);
+}
+
+.button-group a:hover::after {
+  animation: shine 0.8s forwards;
+}
+
+@keyframes shine {
+  100% {
+    left: 125%;
+  }
+}
+
+/* 기본 버튼 */
+.default-btn {
+  background: rgba(255,255,255,0.9);
+  color: black;
+}
+
+.default-btn:hover {
   background: white;
+  transform: scale(1.08);
+}
+
+/* 인스타 버튼 */
+.insta-btn {
+  background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+  color: white;
+}
+
+.insta-btn:hover {
+  transform: scale(1.08);
+}
+
+/* 이메일 버튼 */
+.mail-btn {
+  background: #4CAF50;
+  color: white;
+}
+
+.mail-btn:hover {
+  background: #45a049;
+  transform: scale(1.08);
 }
 </style>
 </head>
@@ -61,7 +127,27 @@ a:hover {
   <p>전화번호: 010-5017-6664</p>
   <p>언제든 연락 주세요 🚀</p>
 
-  <a href="index.html">메인으로</a>
+  <div class="button-group">
+
+    <!-- 인스타 새창 + 보안 -->
+    <a href="https://www.instagram.com/rkdhxun/" 
+       target="_blank" 
+       rel="noopener noreferrer" 
+       class="insta-btn">
+       📸 @rkdhxun
+    </a>
+
+    <!-- 이메일 -->
+    <a href="mailto:your@email.com" class="mail-btn">
+      ✉ Email
+    </a>
+
+    <!-- 메인 -->
+    <a href="index.html" class="default-btn">
+      🏠 메인으로
+    </a>
+
+  </div>
 </div>
 
 </body>
