--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ body {
   background: radial-gradient(circle at center, #0a0f2c 0%, #000000 70%);
 }
 
-/* 움직이는 성운 배경 */
+/* 전체 움직이는 성운 배경 */
 .space {
   position: fixed;
   width: 200%;
@@ -23,7 +23,7 @@ body {
               radial-gradient(circle at 70% 60%, rgba(150, 0, 255, 0.4), transparent 40%),
               radial-gradient(circle at 50% 20%, rgba(255, 0, 150, 0.3), transparent 40%);
   animation: moveSpace 30s linear infinite alternate;
-  z-index: -1;
+  z-index: -2;
 }
 
 @keyframes moveSpace {
@@ -34,6 +34,8 @@ body {
 .container {
   margin-top: 180px;
   animation: fadeIn 2s ease-in-out;
+  position: relative;
+  z-index: 1;
 }
 
 @keyframes fadeIn {
@@ -41,6 +43,47 @@ body {
   to { opacity: 1; transform: translateY(0); }
 }
 
+/* 이메일 우주 배경 박스 */
+.email-box {
+  position: relative;
+  display: inline-block;
+  margin-top: 25px;
+  padding: 15px 30px;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+/* 이메일 뒤 움직이는 작은 성운 */
+.email-box::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(0,150,255,0.4), transparent 60%),
+              radial-gradient(circle, rgba(255,0,200,0.3), transparent 60%);
+  animation: rotateNebula 20s linear infinite;
+  z-index: -1;
+}
+
+@keyframes rotateNebula {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.email-box a {
+  color: #4CAF50;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.email-box a:hover {
+  text-decoration: underline;
+}
+
+/* 버튼 그룹 */
 .button-group {
   margin-top: 30px;
 }
@@ -79,9 +122,7 @@ body {
 }
 
 @keyframes shine {
-  100% {
-    left: 125%;
-  }
+  100% { left: 125%; }
 }
 
 /* 기본 버튼 */
@@ -104,17 +145,6 @@ body {
 .insta-btn:hover {
   transform: scale(1.08);
 }
-
-/* 이메일 버튼 */
-.mail-btn {
-  background: #4CAF50;
-  color: white;
-}
-
-.mail-btn:hover {
-  background: #45a049;
-  transform: scale(1.08);
-}
 </style>
 </head>
 
@@ -127,9 +157,15 @@ body {
   <p>전화번호: 010-5017-6664</p>
   <p>언제든 연락 주세요 🚀</p>
 
-  <div class="button-group">
+  <!-- 움직이는 우주 이메일 박스 -->
+  <div class="email-box">
+    ✉ Email: 
+    <a href="mailto:skarkdgus0912@naver.com">
+      skarkdgus0912@naver.com
+    </a>
+  </div>
 
-    <!-- 인스타 새창 + 보안 -->
+  <div class="button-group">
     <a href="https://www.instagram.com/rkdhxun/" 
        target="_blank" 
        rel="noopener noreferrer" 
@@ -137,16 +173,9 @@ body {
        📸 @rkdhxun
     </a>
 
-    <!-- 이메일 -->
-    <a href="mailto:your@email.com" class="mail-btn">
-      ✉ Email
-    </a>
-
-    <!-- 메인 -->
     <a href="index.html" class="default-btn">
       🏠 메인으로
     </a>
-
   </div>
 </div>
 
